--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html> 
 
 <head> 
-	<Title>This is my title </Title> 
+	<Title>Her er inkAR siden som kommer </Title> 
 
   
 </head>
 <body> 
 <p> hei </p>
-<h3> My heading </h3>
-<p> My Paragraph </p>	
+<h3> Under konstruksjon </h3>
+<p> Vær tolmodig </p>	
 </body>
 
 </html> 
