--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html> 
 
 <head> 
-	<Title>Her er inkAR siden som kommer </Title> 
-	<p>test</p>
-  
+	<Title>Her er inkAR siden som kommer </Title>   
 </head>
 <body> 
 <p> hei!!! </p>
+	<p>food</p>
 <h3> Under konstruksjon </h3>
 <p> Vær tolmodig XDD</p>	
 </body>
