--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body> 
 <p> hei!!! </p>
 <h3> Under konstruksjon </h3>
-<p> Vær tolmodig XDD</p>	
+<p> Vær tolmodig XDD</p>
+	<p> beeep</p>
 </body>
 
 </html> 
