--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <h3> Under konstruksjon </h3>
 <p> Vær tolmodig XDD</p>
 	<p> beeep</p>
+	<p> Magnus fikk det til </p>
+	<p> Test </p>
 </body>
 
 </html> 
