--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p> hei!!! </p>
 <h3> Under konstruksjon </h3>
 <p> Vær tolmodig XDD</p>
-	<p> beeep</p>
+	<p> beeep dajajddj</p>
 	<p> Magnus fikk det til </p>
 	<p> Test </p>
 </body>
