Testet alle tilganger

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <p> hei!!! </p>
 <h3> Under konstruksjon </h3>
 <p> Vær tolmodig XDD</p>
-	<p> beeep dajajddj</p>
+	<p> beeep dajajddj Diwasan fikk det til </p>
 	<p> Magnus fikk det til </p>
-	<p> Test123 </p>
-	<p> Bæsjtiss</p>
+	<p> Test123 Bo fikk det til </p>
+	<p> Bæsjtiss Snorre</p>
+	
 </body>
 
 </html> 
