--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 	<p> beeep dajajddj Diwasan fikk det til </p>
 	<p> Magnus fikk det til </p>
 	<p> Test123 Bo fikk det til </p>
-	<p> Bæsjtiss Snorre</p>
+	<p> hei hei xdddddd</p>
 	
 </body>
 
